tests/lime/fail/tokens/macro_first/byte_50.wsa
macro 2 [push 50] 2
